3.4
	+ Increased the buffer size for uwsgi applications to allow big submits
	  like the one from automatic error report
	+ Added a UnhandledError middleware to catch any die or exception not
	  handled by Zentyal
	+ Added a Devel::StackTrace helper view that shows pretty backtraces
	+ Enable crash reports by default
	+ Added template for download link
	+ Created EBox::Util::Certificate, refactored create-certificate
	  script
	+ Changes in haproxy port validation and allow haproxy internal services
	+ Restore AdminPort model for WebAdmin to improve usability
	+ Added EBox::Module::Config::replicationExcludeKeys()
	+ Added EBox::WebAdmin::PortObserver to be used by ha and
	  remoteservices modules by the moment
	+ Added EBox::GlobalImpl::addModuleToPostSave to save modules
	  after normal save changes process
	+ Added a way for HAProxy to retrieve the CA certificate entry that should
	  be used
	+ Added a left-right composite layout
	+ Search and pagination forms can be omitted using showFilterForm
	  and showPaginationForm properties
	+ Show nice error when global-action fails using die + scalar
	+ EBox::Util::Random now accepts a set of chars to have a random string
	+ Notify HA when a module which must have a single instance in the
	  cluster is enabled/disabled.
	+ Added enabled action to /etc/init.d/zentyal to display whether a
	  module is enabled or disabled
	+ Pass model, type and id to enabled subroutine in
	  EBox::Types::MultiStateAction to be ortoghonal to handler property
	+ Fixed JS error on showing errors in customActionClicked
	+ Added middleware to have auth based on a env variable
	+ Updated nginx to server static files directly always so apache shouldn't
	  ever get this kind of requests
	+ Use uWSGI instead of Apache mod_perl for running CGIs
	+ Updated automatic bug report URL to new bug report endpoint.
	+ Give support to custom actions without image. Those actions will
	  not appear in the legend.