@@ -1,4 +1,6 @@
 3.4
+	+ Removed EBox::Base::upload method because that's 100% handled by Plack
+	  now.
 	+ Increased the buffer size for uwsgi applications to allow big submits
 	  like the one from automatic error report
 	+ Added a UnhandledError middleware to catch any die or exception not
